--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="asset/img/favicon.png"  >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>短链生成器</title>
+    <title>short Url</title>
     <style>
       :root {
         --color-primary: #5c7cfa;
@@ -203,21 +203,21 @@
     </style>
   </head>
   <body>
-    <header><h1>短链生成器</h1></header>
+    <header><h1>Short Url</h1></header>
     <main x-data="app" x-cloak>
       <p x-show.transition.opacity="alert" :class="alert?.type" x-text="alert?.message"></p>
-      <input placeholder="输入要缩短的网址..." x-model="url" x-ref="url" />
+      <input placeholder="輸入要縮短的網址..." x-model="url" x-ref="url" />
       <details>
-        <summary>自定义设置</summary>
+        <summary>自定義設置</summary>
         <div>
           <input placeholder="slug" x-model="slug" />
-          <small>不设置则随机生成 slug</small>
+          <small>不設置則隨機生成 slug</small>
         </div>
       </details>
       <button :class="{ loading }" :disabled="loading || isValidated()" @click="submit($refs, $nextTick)">生成</button>
     </main>
     <footer>
-      基于 <a href="https://github.com/harrisonwang/linklet" target="_blank">Cloudflare</a> 的短链生成器
+      基于 <a href="https://cloudflare.com" target="_blank">Cloudflare</a> 
     </footer>
     <script src="asset/js/alpine.js"></script>
     <script>
@@ -231,12 +231,12 @@
         },
         submit ($refs, $nextTick) {
           if (!this.url) {
-            this.alert = { type: 'error', message: '缺少必需的参数：url。' }
+            this.alert = { type: 'error', message: '缺少參數：url。' }
             return
           }
 
           if (this.isValidated()) {
-            this.alert = { type: 'error', message: '非法格式：url。' }
+            this.alert = { type: 'error', message: '格式錯誤：url。' }
             return
           }
 
@@ -263,7 +263,7 @@
 
               $nextTick(() => {
                 $refs.url.select()
-                this.alert = { type: 'success', message: `链接 ${document.execCommand('Copy') ? '复制' : '生成'} ` }
+                this.alert = { type: 'success', message: `鏈接 ${document.execCommand('Copy') ? '複製' : '生成'} ` }
               })
             })
             .catch(e => {
